<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mx.utng.appdegustavo.ui.welcome.WelcomeActivity">

  <TextView
      android:id="@+id/welcomeTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="48dp"
      android:gravity="center"
      android:text="Bienvenido!!!!!"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/welcomeDescription"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="48dp"
      android:gravity="center"
      android:text="@string/welcome_description"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

  <Button
      android:id="@+id/loginButton"
      style="@android:style/Widget.Holo.Light.Button"
      android:layout_width="0dp"
      android:layout_height="56dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="16dp"
      android:gravity="center"
      android:text="@string/log_in_button"
      app:layout_constraintBottom_toTopOf="@id/registerButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/registerButton"
      style="@android:style/Widget.Holo.Button"
      android:layout_width="0dp"
      android:layout_height="56dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="46dp"
      android:gravity="center"
      android:text="@string/register_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="291dp"
      android:layout_height="417dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="430dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/borrega" />

</android.support.constraint.ConstraintLayout>
